[gd_scene load_steps=6 format=3 uid="uid://b15ehv2gu1d4n"]

[ext_resource type="Script" path="res://party.gd" id="1_yb3o6"]
[ext_resource type="PackedScene" uid="uid://c16yn6farik7x" path="res://entities/man_at_arms.tscn" id="2_lbyk8"]
[ext_resource type="PackedScene" uid="uid://w7iuoxqntqu4" path="res://entities/paladin.tscn" id="3_ome3f"]
[ext_resource type="PackedScene" uid="uid://46lwm1amrp2s" path="res://entities/cleric.tscn" id="4_xa0tq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6p2sn"]
size = Vector2(77, 87)

[node name="party" type="Area2D"]
disable_mode = 2
script = ExtResource("1_yb3o6")

[node name="man_at_arms" parent="." instance=ExtResource("2_lbyk8")]
position = Vector2(0, -52)
scale = Vector2(1, 1)

[node name="paladin" parent="." instance=ExtResource("3_ome3f")]
position = Vector2(34, -24)
scale = Vector2(1, 1)

[node name="cleric" parent="." instance=ExtResource("4_xa0tq")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(22.5, -26.5)
shape = SubResource("RectangleShape2D_6p2sn")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="dead" from="man_at_arms" to="." method="_on_man_at_arms_dead"]
[connection signal="dead" from="paladin" to="." method="_on_paladin_dead"]
[connection signal="dead" from="cleric" to="." method="_on_cleric_dead"]
